completed draft of lecture 3.2 and exercises

--- a/2020/lecture_notes/tex/3_Second_Quantization_b.tex
+++ b/2020/lecture_notes/tex/3_Second_Quantization_b.tex
@@ -3,60 +3,308 @@
 \usepackage{graphicx}
 \usepackage{gensymb}
 \usepackage{verbatim}
+\usepackage{cancel}
 \usepackage{mathrsfs}
 \usepackage{bbm}
 \usepackage{braket}
+\usepackage{xcolor}
+\definecolor{orange}{RGB}{255,127,0}
 \usepackage{verbatim}
 \usepackage[margin=1.0in]{geometry}
 \newcommand{\ol}{\overline}
 \newcommand{\ve}{\varepsilon}
+\newcommand{\ap}{\ensuremath{a_p} }
+\newcommand{\dg}{\ensuremath{^\dagger} }
+\newcommand{\cd}{\ensuremath{\cdots} }
+\newcommand{\apd}{\ensuremath{a_p^\dagger} }
 \def\*#1{\mathbf{#1}}
 \DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
 
-\title{Lecture 3.2:  Second Quantization: Hamiltonian}
-\date{February , 2020}
+\title{Lecture 3.2: The Hamiltonian in Second Quantization}
+\date{February 10$^{\text{th}}$, 2020}
 \begin{document}
 \maketitle
 \noindent
-\section{Proving the form of the many-body operator in second-quantization}
-\subsection{How do creation and annihilation operators act on a determinant }
-%\section{advantages of Second Quantization}
-%As we will later see, this choice will lead to easier mathematical manipulations. 
-\section{Wick's Theorem}
-%maybe outline of how it's gonna go - the things in wick's thrm treat one by one, etc.
-\subsection{Normal Products}
-\subsection{Contractions of Operators}
-\subsection{Normal Products with Contractions}
-\subsection{Proof of 2 Lemmas}
-\subsection{Proof of Wick's Theorem}
-%after this - maybe a map of why wick's theorem is useful: have normal products and normal products with contractions, have 
-%rules for determining these in the vacuum, then wick's theorem provides a way to put any product of operators in these forms
-\section{Derivation of Slater's rules using Wick's Theorem}
+\section{Introduction }
+So far, we have see that any determinant can be written as a string of creation operators acting on a vacuum state. 
+Our next task is to formulate the Hamiltonian in terms of creation and annihilation operators so we have a unified language. 
+We will first generalize the effect of an annihilation operator acting on a determinant, which will then be used to derive the one-body and two-body operators 
+in the second quantization formalism. 
 
-\section{Particle-Hole Formalism}
-\subsection{Motivating the particle-hole formalism}
-\subsection{Normal Products}
-\subsection{Contractions of Operators}
-\subsection{Normal Products with Contractions}
-\subsection{Wick's Theorem}
-\section{$\Phi$--Normal ordered Hamiltonian}
+\section{Re-expressing the effect of operators on the determinant }
+For an arbitrary set of indices $\{p_1 \cdots p_N\}$, the actions of \ap and \apd are given by: 
+ \begin{align}
+   a_p\Phi_{(p_1\cd p_N)}
+ =
+   (-)^{k-1}\Phi_{(p_1\cd\cancel{p_k}\cd p_N)}
+   \ \text{if $p=p_k\in(p_1\cd p_N)$}
+ &&
+   a_p\Phi_{(p_1\cd p_N)}
+ =
+   0
+   \ \text{if $p\notin(p_1\cd p_N)$}
+ \\
+   a_p\dg\Phi_{(p_1\cd p_N)}
+ =
+   (-)^{k-1}\Phi_{(p_1\cd p_{k-1}pp_k\cd p_N)}
+   \ \text{if $p\notin(p_1\cd p_N)$}
+ &&
+   a_p\dg\Phi_{(p_1\cd p_N)}
+ =
+   0
+   \ \text{if $p\in(p_1\cd p_N)$}
+ \end{align}
+We can prove (Appendix I) that Equation 1, instead of two parts, can be generally expressed as: 
+\begin{equation}
+a_q \Phi_{(p_1\cd p_N)} =  \sum_i^N (-1)^{i-1} \delta_{qp_i} \Phi_{(p_1\cd\cancel{p_i}\cd p_N)} 
+\end{equation}
+or writing the determinant as a product of creation operators, 
+\begin{equation}
+a_q a_{p_1}\dg \cd a_{p_{i -1}}\dg a_{p_i}\dg a_{p_{i +1}}\dg \cd a_{p_N}\dg \ket{0}=  \sum_i^N (-1)^{i-1} \delta_{qp_i} a_{p_1}\dg \cd a_{p_{i -1}}\dg a_{p_{i +1}}\dg \cd a_{p_N}\dg \ket{0}
+\end{equation}
+We can adopt a shorthand notation where we express 
+\[a_{p_1}\dg \cd a_{p_{i -1}}\dg a_{p_i}\dg a_{p_{i +1}}\dg \cd a_{p_N}\dg \ket{0} = \prod a\dg \ket{0}\]
+and 
+\[a_{p_1}\dg \cd a_{p_{i -1}}\dg a_{p_{i +1}}\dg \cd a_{p_N}\dg \ket{0} =  \prod{}^{p_i} a\dg \ket{0} \]
+where $\prod{}^{p_i} a\dg $ stands for the string of creation operators without $a_{p_i}\dg$. 
+In this notation, we rewrite Equation 3 a final time: 
+\begin{equation}
+a_q \prod a\dg \ket{0} =  \sum_i^N (-1)^{i-1} \delta_{qp_i} \prod{}^{p_i} a\dg \ket{0}
+\end{equation}
+You can show that two annhilation operators acting on a determinant can be similarly rewritten to be
+\begin{equation}
+a_r a_s \prod a\dg \ket{0} = \sum\limits_{i < j} ^N  (-1)^{i + j }   \delta_{rp_i} \delta_{sp_j}  \prod{}^{p_ip_j} a\dg \ket{0} + 
+\sum\limits_{i > j} ^N  (-1)^{i + j -1} \delta_{rp_i} \delta_{sp_j} \prod{}^{p_ip_j}a\dg \ket{0}
+\end{equation}
+by applying Equation 5 twice. 
+
+\section{Deriving the one-electron operator in second quantization}
+
+We can come to a definition of the one-electron operator $\hat{O}_1 = \sum\limits_i^N \hat{h} (\*{r}_i) $  in the second quantization formalism by acting it a determinant $ \Phi_{p_1 \cdots p_N} = \prod a\dg \ket{0} $:  \\ \\
+\[\hat{O}_1 \prod a\dg \ket{0} = \hat{O}_1\Phi_{p_1 \cdots p_N} = \hat{O}_1 \sqrt{N!} \hat{A} (\psi_{p_1} \cdots \psi_{p_N}) \]
+Next, we recognize that  $\hat{A}$ and $\hat{O}_1$, so we can switch their order (for general comments on commuting operators, see Appendix II): 
+\[ = \sqrt{N!}  \hat{A} \hat{O}_1  (\psi_1 \cdots \psi_N) \]
+We can now re-express $\hat{O}_1$: 
+\[=  \sqrt{N!}  \hat{A}  \sum_i^N \hat{h} (\*{r}_i) (\psi_1 \cdots \psi_N) \]
+Since $\hat{h} (\*{r}_i) $ only applies to one spin-orbital $\psi_{p_i}(\*{r}_i)$, we can move it out of the product of spin-orbitals:
+\[=  \sqrt{N!}  \hat{A} {\color{blue}  \sum_i^N \hat{h} (\*{r}_i) \psi_{p_i} (\*{r}_i)} (\psi_{p_1} \cdots \cancel{\psi_{p_i}} \cdots \psi_{p_N}) \]
+Using the resolution of the identity, we can rewrite the term in {\color{blue}blue} as: 
+\[=  \sqrt{N!}   \hat{A}  {\color{blue} \sum_i^N  \sum_p \braket{p | \hat{h} | p_i } \psi_p } (\psi_{p_1} \cdots \cancel{\psi_{p_i}} \cdots \psi_{p_N}) \]
+ We can move $\psi_p$ into the product of spin-orbitals, and move the antisymmetrizer again to recover a Slater determinant: 
+\begin{align*}
+&= \sqrt{N!}  \hat{A}   \sum_i^N  \sum_p \braket{p | \hat{h} | p_i }  (\psi_{p_1} \cdots \psi_{p_{i-1}} \psi_p \psi_{p_{i+1}} \cdots \psi_{p_N}) \\
+&=\sum_i^N  \sum_p \braket{p | \hat{h} | p_i } \sqrt{N!}  \hat{A} (\psi_{p_1} \cdots \psi_{p_{i-1}} \psi_p \psi_{p_{i+1}} \cdots \psi_{p_N}) \\
+&=\sum_i^N  \sum_p \braket{p | \hat{h} | p_i } \Phi_{{p_1} \cdots {p_{i-1}} p {p_{i+1}} \cdots {p_N}} \\
+\end{align*}
+Notice that the Slater determinant is not the original one we are acting on. Instead of $\psi_{p_i}$, it contains $\psi_p$.  
+Our next step is to express this Slater determinant as a product of creation operators acting on the vacuum, and move $a_p\dg$ in front using anticommutation rules:
+\begin{align*}
+&= \sum_i^N  \sum_p \braket{p | \hat{h} | p_i } a_{p_1}^\dagger \cdots a_{p_{i-1}}^\dagger {\color{blue}a_p^\dagger} a_{p_{i+1}}^\dagger \cdots a_{p_N}^\dagger \ket{0}\\
+&= \sum_i^N  \sum_p \braket{p | \hat{h} | p_i } {\color{blue}a_p^\dagger} (-1)^{i-1} a_{p_1}^\dagger \cdots a_{p_{i-1}}^\dagger a_{p_{i+1}}^\dagger \cdots a_{p_N}^\dagger \ket{0}\\
+\end{align*}
+From here, we apply the resolution of the identity once again, and notice that $\braket{q | p_i }$ is just $\delta_{q p_i}$: 
+\begin{align*}
+&= \sum_i^N  \sum_{p{\color{blue}q}} \bra{p}\hat{h}{\color{blue} \ket{ q} \bra{q }}p_i \rangle a_p^\dagger (-1)^{i-1} a_{p_1}^\dagger \cdots a_{p_{i-1}}^\dagger a_{p_{i+1}}^\dagger \cdots a_{p_N}^\dagger \ket{0}\\
+&= \sum_i^N  \sum_{pq} \braket{p | \hat{h} | q} {\color{red}\delta_{q p_i}} a_p^\dagger (-1)^{i-1} a_{p_1}^\dagger \cdots a_{p_{i-1}}^\dagger a_{p_{i+1}}^\dagger \cdots a_{p_N}^\dagger \ket{0}\\
+\end{align*}
+Now we separate the terms by the appropriate summation, and notice that the terms following the summation of indices i is exactly the definition we obtained in Equation 4. 
+\begin{align*}
+&=  \sum_{pq} \braket{p | \hat{h} | q}  a_p^\dagger {\color{blue} \sum_i^N \delta_{q p_i} (-1)^{i-1} a_{p_1}^\dagger \cdots a_{p_{i-1}}^\dagger a_{p_{i+1}}^\dagger \cdots a_{p_N}^\dagger \ket{0}}\\
+&=  \sum_{pq} \braket{p | \hat{h} | q}  a_p^\dagger {\color{blue} a_q a_{p_1}\dg \cd a_{p_{i -1}}\dg a_{p_i}\dg a_{p_{i +1}}\dg \cd a_{p_N}\dg \ket{0}}\\
+&=  \sum_{pq} \braket{p | \hat{h} | q}  a_p^\dagger a_q  {\color{red} a_{p_1}\dg \cd a_{p_{i -1}}\dg a_{p_i}\dg a_{p_{i +1}}\dg \cd a_{p_N}\dg \ket{0}}\\
+&=  \sum_{pq} \braket{p | \hat{h} | q}  a_p^\dagger a_q  {\color{red} \prod a\dg \ket{0}}\\
+\end{align*}
+where the term in {\color{red} red} is just our original Slater determinant.  \\ \\
+Our final equation is: 
+\begin{equation}
+\hat{O}_1 {\color{red} \prod a\dg \ket{0}}  = \sum_{pq} \braket{p | \hat{h} | q}  a_p^\dagger a_q  {\color{red} \prod a\dg \ket{0}} 
+\end{equation}
+Since Equation 6 is true for any arbitrary determinant, conclude that 
+\begin{equation}
+\hat{O}_1 = \sum_{pq} \braket{p | \hat{h} | q}  a_p^\dagger a_q 
+\end{equation}
+is an appropriate definition for the one-electron operator in the second quantization formalism.
+
+\section{Deriving the two-electron operator in second quantization}
+\subsection{The two-body operator}
+We can come to a definition of the two-electron operator $\hat{O}_2 = \sum\limits_{i < j} ^N \hat{g} (\*{r}_i, \*{r}_j) $ 
+in the second quantization formalism in a similar process as the one-electron operator. 
+\\ \\
+We start by acting it a determinant $ \Phi_{p_1 \cdots p_N} = \prod a\dg \ket{0} $:  \\ \\
+\[\hat{O}_2 \Phi_{p_1 \cdots p_N} = \sum\limits_{i < j} ^N \hat{g} (\*{r}_i, \*{r}_j)  \sqrt{N!} \hat{A} (\psi_{p_1} \cdots \psi_{p_N}) =  \frac{1}{2} \sum\limits_{i j} ^N \hat{g} (\*{r}_i, \*{r}_j)  \sqrt{N!} \hat{A} (\psi_{p_1} \cdots \psi_{p_N}) \] 
+where we can rewrite the summation $i < j$ as $ij$ with a factor of $\frac{1}{2}$ in front. \\ \\
+Just as in the case of the one-electron operator, $\hat{A}$ and $\hat{O}_2$ commute, so we can switch their order: 
+\[= \frac{1}{2} \sqrt{N!}  \hat{A} \sum\limits_{i j} ^N \hat{g} (\*{r}_i, \*{r}_j)  (\psi_1 \cdots \psi_N) \]
+Since $\hat{g} (\*{r}_i, \*{r}_j)  $ only applies to spin-orbitals $\psi_{p_i}(\*{r}_i)$ and $\psi_{p_j}(\*{r}_j)$, we can move them out of the product of spin-orbitals:
+\[= \frac{1}{2} \sqrt{N!}  \hat{A} {\color{blue}  \sum\limits_{i j} ^N \hat{g} (\*{r}_i, \*{r}_j) \psi_{p_i} (\*{r}_i) \psi_{p_j} (\*{r}_i)} (\psi_{p_1} \cdots \cancel{\psi_{p_i}} \cd  \cancel{\psi_{p_j}} \cdots \psi_{p_N}) \]
+Using the resolution of the identity, we can rewrite the term in {\color{blue}blue} as: 
+\[= \frac{1}{2}  \sqrt{N!}   \hat{A}  {\color{blue}  \sum\limits_{i j} ^N   \sum_{pq}  \braket{pq | \hat{g} | p_i q_i } \psi_p \psi_q }  (\psi_{p_1} \cdots \cancel{\psi_{p_i}} \cd  \cancel{\psi_{p_j}} \cdots \psi_{p_N}) \]
+\\ 
+ We can move $\psi_p$  and $\psi_q$ into the product of spin-orbitals and move the antisymmetrizer again to recover a Slater determinant, but there are now two cases to consider.
+ There are two Slater determinants we can form, one for cases $i < j$ and one for cases $i > j$. 
+ Thus, we split our equation into two terms: 
+\begin{align*}
+= &\frac{1}{2} \sum\limits_{i < j} ^N   \sum_{pq}  \braket{pq | \hat{g} | p_i q_i }  \sqrt{N!}   \hat{A}  (\psi_{p_1} \cd \psi_{p_{i - 1}} {\color{blue} \psi_{p}} \psi_{p_{i +1}} \cd  \psi_{p_{j - 1}} {\color{red} \psi_{q}}\psi_{p_{j +1}} \cd \psi_{p_N})  \\
++ &\frac{1}{2} \sum\limits_{i > j} ^N   \sum_{pq}  \braket{pq | \hat{g} | p_i q_i } \sqrt{N!}   \hat{A}  (\psi_{p_1} \cd \psi_{p_{j - 1}}  {\color{red} \psi_{q}}\psi_{p_{j +1}} \cd  \psi_{p_{i - 1}} {\color{blue} \psi_{p}}\psi_{p_{i +1}} \cd \psi_{p_N})  \\
+= &\frac{1}{2} \sum\limits_{i < j} ^N   \sum_{pq}  \braket{pq | \hat{g} | p_i q_i } \Phi_{{p_1} \cd p_{i - 1} {\color{blue} {p}} {p_{i +1}} \cd  {p_{j - 1}} {\color{red} {q}}{p_{j +1}} \cd {p_N}} \\
++ &\frac{1}{2} \sum\limits_{i > j} ^N   \sum_{pq}  \braket{pq | \hat{g} | p_i q_i } \Phi_{{p_1} \cd {p_{j - 1}}  {\color{red} {q}}{p_{j +1}} \cd  {p_{i - 1}} {\color{blue} {p}}{p_{i +1}} \cd {p_N}}  \\
+\end{align*}
+Our next step is to express the Slater determinants in our expression as a product of creation operators acting on the vacuum, and move $a_p\dg$ in front using anticommutation rules:
+\begin{align*}
+= &\frac{1}{2} \sum\limits_{i < j} ^N   \sum_{pq}  \braket{pq | \hat{g} | p_i q_i }  (a\dg_{p_1} \cd a\dg_{p_{i - 1}} {\color{blue} a\dg_{p}} a\dg_{p_{i +1}} \cd  a\dg_{p_{j - 1}} {\color{red} a\dg_{q}}a\dg_{p_{j +1}} \cd a\dg_{p_N}) \ket{0}  \\
++ &\frac{1}{2} \sum\limits_{i > j} ^N   \sum_{pq}  \braket{pq | \hat{g} | p_i q_i }  (a\dg_{p_1} \cd a\dg_{p_{j - 1}}  {\color{red} a\dg_{q}}a\dg_{p_{j +1}} \cd  a\dg_{p_{i - 1}} {\color{blue} a\dg_{p}}a\dg_{p_{i +1}} \cd a\dg_{p_N})  \ket{0}  \\ \\
+= &\frac{1}{2} \sum\limits_{i < j} ^N   \sum_{pq}  \braket{pq | \hat{g} | p_i q_i } (-1)^{i - 1 + j - 1 - 1}  {\color{blue}  a\dg_{p}}  {\color{red} a\dg_{q}} (a\dg_{p_1} \cd a\dg_{p_{i - 1}}  a\dg_{p_{i +1}} \cd  a\dg_{p_{j - 1}} a\dg_{p_{j +1}} \cd a\dg_{p_N}) \ket{0}  \\
++ &\frac{1}{2} \sum\limits_{i > j} ^N   \sum_{pq}  \braket{pq | \hat{g} | p_i q_i } (-1)^{j - 1 + i -1 -1}  {\color{red} a\dg_{q}}   {\color{blue} a\dg_{p}} (a\dg_{p_1} \cd a\dg_{p_{j - 1}} a\dg_{p_{j +1}} \cd  a\dg_{p_{i - 1}}a\dg_{p_{i +1}} \cd a\dg_{p_N})  \ket{0}  \\
+\end{align*}
+We can switch the order of ${\color{red} a\dg_{q}}$ and  ${\color{blue} a\dg_{p}}$ with an additional phase factor, and simplify the phase factor:
+\begin{align*}
+= &\frac{1}{2} \sum\limits_{i < j} ^N   \sum_{pq}  \braket{pq | \hat{g} | p_i q_i } (-1)^{i + j - 1}  {\color{blue}  a\dg_{p}}  {\color{red} a\dg_{q}} (a\dg_{p_1} \cd a\dg_{p_{i - 1}}  a\dg_{p_{i +1}} \cd  a\dg_{p_{j - 1}} a\dg_{p_{j +1}} \cd a\dg_{p_N}) \ket{0}  \\
++ &\frac{1}{2} \sum\limits_{i > j} ^N   \sum_{pq}  \braket{pq | \hat{g} | p_i q_i } (-1)^{i + j}   {\color{blue} a\dg_{p}}  {\color{red} a\dg_{q}}  (a\dg_{p_1} \cd a\dg_{p_{j - 1}} a\dg_{p_{j +1}} \cd  a\dg_{p_{i - 1}}a\dg_{p_{i +1}} \cd a\dg_{p_N})  \ket{0}  \\
+= &\frac{1}{2} \sum\limits_{i < j} ^N   \sum_{pq}  \braket{pq | \hat{g} | p_i q_i } (-1)^{i + j - 1}  {\color{blue}  a\dg_{p}}  {\color{red} a\dg_{q}} \prod{}^{p_ip_j}a\dg \ket{0} 
+ + \frac{1}{2} \sum\limits_{i > j} ^N   \sum_{pq}  \braket{pq | \hat{g} | p_i q_i } (-1)^{i + j}   {\color{blue} a\dg_{p}}  {\color{red} a\dg_{q}} \prod{}^{p_ip_j}a\dg \ket{0}  \\
+\end{align*}
+
+From here, we apply the resolution of the identity to introduce two more summations over $r$ and $s$: 
+\begin{align*}
+= &\frac{1}{2} \sum\limits_{i < j} ^N  {\color{orange} \sum_{pq}  \sum_{rs}  \braket{pq | \hat{g} | rs } \braket{r| p_i} \braket{s | p_j} }(-1)^{i + j - 1}  a\dg_{p} a\dg_{q} \prod{}^{p_ip_j}a\dg \ket{0} \\
+ + &\frac{1}{2} \sum\limits_{i > j} ^N  {\color{orange}  \sum_{pq}  \sum_{rs} \braket{pq | \hat{g} | rs} \braket{r| p_i} \braket{s | p_j} } (-1)^{i + j}   a\dg_{p}a\dg_{q} \prod{}^{p_ip_j}a\dg \ket{0}  \\
+\end{align*}
+and recognize that $ \braket{r| p_i}  = \delta_{rp_i}$ and $ \braket{s| p_j}  = \delta_{sp_j}$: 
+\begin{align*}
+= &\frac{1}{2} \sum\limits_{i < j} ^N  {\color{orange} \sum_{pqrs} \braket{pq | \hat{g} | rs }  \delta_{rp_i} \delta_{sp_j}}(-1)^{i + j - 1}  a\dg_{p} a\dg_{q} \prod{}^{p_ip_j}a\dg \ket{0} \\
+ + &\frac{1}{2} \sum\limits_{i > j} ^N  {\color{orange}  \sum_{pqrs}  \braket{pq | \hat{g} | rs} \delta_{rp_i} \delta_{sp_j}} (-1)^{i + j}   a\dg_{p}a\dg_{q} \prod{}^{p_ip_j}a\dg \ket{0}  \\
+\end{align*}
+We can now rearrange the equation using like terms: 
+\begin{align*}
+= &\frac{1}{2}  \sum_{pqrs}  \braket{pq | \hat{g} | rs}  a\dg_{p}a\dg_{q} {\color{blue} \left[  \sum\limits_{i < j} ^N  (-1)^{i + j - 1}   \delta_{rp_i} \delta_{sp_j}  \prod{}^{p_ip_j} a\dg \ket{0} + 
+\sum\limits_{i > j} ^N  (-1)^{i + j} \delta_{rp_i} \delta_{sp_j} \prod{}^{p_ip_j}a\dg \ket{0}  \right]} \\
+\end{align*}
+The term in {\color{blue} blue} almost equals Equation 6  
+\[a_r a_s \prod a\dg \ket{0} = \sum\limits_{i < j} ^N  (-1)^{i + j }   \delta_{rp_i} \delta_{sp_j}  \prod{}^{p_ip_j} a\dg \ket{0} + 
+\sum\limits_{i > j} ^N  (-1)^{i + j -1} \delta_{rp_i} \delta_{sp_j} \prod{}^{p_ip_j}a\dg \ket{0}
+\]
+except for the switched summations. 
+We see that we can flip the terms after the summations if we flip the order of our operators $a_r$ and $a_s$: 
+\[a_s a_r \prod a\dg \ket{0}  = - a_r a_s \prod a\dg \ket{0} = \sum\limits_{i < j} ^N  (-1)^{i + j -1 }   \delta_{rp_i} \delta_{sp_j}  \prod{}^{p_ip_j} a\dg \ket{0} + 
+\sum\limits_{i > j} ^N  (-1)^{i + j } \delta_{rp_i} \delta_{sp_j} \prod{}^{p_ip_j}a\dg \ket{0}
+\]
+We therefore substitute $a_s a_r \prod a\dg \ket{0} $ in to get our final expression: 
+\begin{align}
+\hat{O}_2  {\color{red} \prod a\dg \ket{0} }= &\frac{1}{2}  \sum_{pqrs}  \braket{pq | \hat{g} | rs}  a\dg_{p}a\dg_{q} a_s a_r {\color{red} \prod a\dg \ket{0} } \label{eqx}
+\end{align}
+where the term in {\color{red} red} is just our original Slater determinant. \textit{Notice that the order of the indices in the operator string is different than the order of the indices in the matrix element. } \\ \\
+Since Equation~\ref{eqx}  is true for any arbitrary determinant, we conclude that 
+\begin{equation}
+\hat{O}_2 =\frac{1}{2}  \sum_{pqrs}  \braket{pq | \hat{g} | rs}  a\dg_{p}a\dg_{q} a_s a_r
+\end{equation}
+is an appropriate definition for the two-electron operator in the second quantization formalism.
+\\
+\subsection{The antisymmetrized form of the two body operator}
+In general N-body operator in the second quantization formalism can be expressed as :
+\[ \hat{O}_k = \frac{1}{k!}   \sum_{\substack{p_1 \cd p_k \\q_1 \cd q_k }}  \braket{ p_1 \cd p_k | \hat{o}_k | q_1 \cd q_k} a_{p_1}\dg \cd \ a_{p_k}\dg a_{q_k} \cd a_{q_1} \]
+This way of expressing the N-body operator, however, only gives us non-symmetric matrix elements. 
+What I mean by this is that the matrix element is only the same under simultaneous permutations of the $p$s and the $q$s. 
+If you only permute the $p$s \textbf{or} the $q$s, you would not get the same matrix element. 
+We want to rewrite the expression in a way to incorporate more symmetry.
+We want to get the same matrix element if we permute the $p$s and $q$s at the same time, but also if we permute them separately. 
+To do this, we have to write instead: 
+\[ \hat{O}_k = \left( \frac{1}{k!} \right)^2  \sum_{\substack{p_1 \cd p_k \\q_1 \cd q_k }}  \braket{ p_1 \cd p_k | \hat{o}_k | q_1 \cd q_k}_\mathscr{A} a_{p_1}\dg \cd \ a_{p_k}\dg a_{q_k} \cd a_{q_1} \]
+where $\braket{ p_1 \cd p_k | \hat{o}_k | q_1 \cd q_k}_\mathscr{A}$ stands for a linear combination of nonsymmetric matrix elements corresponding to all permutations of either p or q, but \textit{not both}. 
+We can write our two-body operator in this anti-symmetrized form. We will choose to permute the $q$s:
+\[\hat{O}_2 =\left( \frac{1}{2!} \right)^2  \sum_{pqrs}  \braket{ pq | \hat{g} | rs}_\mathscr{A} a\dg_{p}a\dg_{q} a_s a_r = \frac{1}{4}\sum_{pqrs} ( \braket{ pq | \hat{g} | rs} -  \braket{ pq | \hat{g} | sr} )  a\dg_{p}a\dg_{q} a_s a_r  \]
+\section{The final form of the Hamiltonian}
+We have now derived the one-body and the two-body operator in the second quantization formalism: 
+\begin{equation}
+\hat{H} = \sum_{pq} \braket{p | \hat{h} | q}  a_p^\dagger a_q  +  \frac{1}{2}  \sum_{pqrs}  \braket{pq | \hat{g} | rs}  a\dg_{p}a\dg_{q} a_s a_r 
+\end{equation}
+From here on, we will often use the following notations to write the matrix elements to make lives a little easier for ourselves: 
+\[ h_{pq} = \braket{p | \hat{h} | q}\]
+\[ \braket{pq | rs}  = \braket{pq | \hat{g} | rs} \]
+\[\braket{pq || rs}  = \braket{pq | \hat{g} | rs} - \braket{pq | \hat{g} | sr} \]
+ Using these shorthand notations, we can write our Hamiltonian as: 
+\[\hat{H} = \sum_{pq} h_{pq} a_p^\dagger a_q  +  \frac{1}{2}  \sum_{pqrs} \braket{pq | rs} a\dg_{p}a\dg_{q} a_s a_r  \]
+or in the antisymmetrized form as: 
+\[\hat{H} = \sum_{pq} h_{pq} a_p^\dagger a_q  +  \frac{1}{4}  \sum_{pqrs} \braket{pq || rs} a\dg_{p}a\dg_{q} a_s a_r  \]
+Note the effect of the Hamiltonian operator on the determinant. 
+In the case of the one body operator, it is removing a spin-orbital $q$ and replacing it with a spin-orbital $p$, multiplied by a matrix element. 
+We can think of this as a single excitation. 
+In the case of the two-body operator, it is removing two spin-orbitals $s$ and $r$ and replacing it with spin-orbitals $p$ and $q$, multiplied by a matrix element.
+We can think of this as a double excitation. \\
+\\
+Notice something else: we have now gotten rid of the dependence on particle number in our Hamiltonian! 
+It is a completely general operator that applies to \textit{any} system size. 
+It is only dependent on the basis that we choose. 
+\\ \\ 
+Previously, we have said our energy can be obtained by: 
+\[E = \braket{\Psi  | \hat{H}  | \Psi} \]
+and that our wavefunction $\Psi$ can be expanded in a basis of determinants: 
+\[E = \sum_{\substack{p_1 < \cd p_N \\q_1 < \cd q_N }} \braket{\Phi_{q_1 \cd q_N}  | c_q^* \hat{H}  c_p | \Phi_{p_1 \cd p_N} } = \sum_{\substack{p_1 < \cd p_N \\q_1 < \cd q_N }} c_q^* c_p \braket{\Phi_{q_1 \cd q_N}  |  \hat{H}  | \Phi_{p_1 \cd p_N} }   \]
+We now have a way to express both the determinant and the Hamiltonian in terms of strings of creation and annihilation operators. 
+The matrix element $\braket{\Phi_{q_1 \cd q_N}  |  \hat{H}  | \Phi_{p_1 \cd p_N} }$  can just be expressed in second quantization as a string of creation and annihilation operators acting on the vacuum state. 
+ Thus we see that the major mathematical manipulations we have to do to get to the energy reduces down to finding the expectation value of strings of creation and annihilation operators acting in the vacuum!  
+The next task we have is finding an efficient way of doing so. 
+ 
+\section*{Appendix I. Annihilation operators acting on the determinant} 
+
+We adopt a shorthand notation where 
+\[\Phi_{(p_1\cd p_N)}  = a_{p_1}\dg \cd a_{p_{i -1}}\dg a_{p_i}\dg a_{p_{i +1}}\dg \cd a_{p_N}\dg \ket{0} = \prod a\dg \ket{0}\]
+and 
+\[ \Phi_{(p_1\cd\cancel{p_i}\cd p_N)} = a_{p_1}\dg \cd a_{p_{i -1}}\dg a_{p_{i +1}}\dg \cd a_{p_N}\dg \ket{0} =  \prod{}^{p_i} a\dg \ket{0} \]
+\\
+The task is to prove that 
+\[a_q \prod a\dg \ket{0} =  \sum_i^N (-1)^{i-1} \delta_{qp_i} \prod{}^{p_i} a\dg \ket{0} \]
+First, we note that if $ q \neq p_i $, we can move $a_q$ all the way to the right to act on the vacuum state, which will give us zero.
+We thus only have to consider the case where  $q = p_i$: 
+
+\begin{align*}
+a_q a_{p_1}\dg \cd a_{p_{i -1}}\dg a_{p_i}\dg a_{p_{i +1}}\dg \cd a_{p_N}\dg \ket{0} &= (-1)^{i-1} a_{p_1}\dg \cd a_{p_{i -1}}\dg {\color{blue} a_q a_{p_i}\dg} a_{p_{i +1}}\dg \cd a_{p_N}\dg \ket{0}  \\
+&=  (-1)^{i-1} a_{p_1}\dg \cd a_{p_{i -1}}\dg {\color{blue} (1 - a_{p_i}\dg a_q) } a_{p_{i +1}}\dg \cd a_{p_N}\dg \ket{0}  \\
+&=  (-1)^{i-1} a_{p_1}\dg \cd a_{p_{i -1}} {\color{blue} (1) }  a_{p_{i +1}}\dg \cd a_{p_N}\dg \ket{0}  - (-1)^{i-1}a_{p_1}\dg \cd a_{p_{i -1}}\dg {\color{blue} (a_{p_i}\dg a_q) } a_{p_{i +1}}\dg \cd a_{p_N}\dg \ket{0} 
+\end{align*}
+The second term goes to zero because we can now move $a_q$ to the right until it annihilates the vacuum.
+We are thus just left with: 
+\[a_q a_{p_1}\dg \cd a_{p_{i -1}}\dg a_{p_i}\dg a_{p_{i +1}}\dg \cd a_{p_N}\dg \ket{0}  = (-1)^{i-1}  \delta_{pq_i} a_{p_1}\dg \cd a_{p_{i -1}} a_{p_{i +1}}\dg \cd a_{p_N}\dg \ket{0} \]
+where we inserted $ \delta_{pq_i}$ to account for the case where $q \neq p_i$. 
+If we want this result to apply generally such that $p_i$ can represent any indices in the string of creation operators, we can just sum over $i$: 
+\[a_q a_{p_1}\dg \cd a_{p_{i -1}}\dg a_{p_i}\dg a_{p_{i +1}}\dg \cd a_{p_N}\dg \ket{0}  = \sum_i^{N} (-1)^{i-1}  \delta_{pq_i} a_{p_1}\dg \cd a_{p_{i -1}} a_{p_{i +1}}\dg \cd a_{p_N}\dg \ket{0} \]
+We see that all the terms in the summation will be zero except for the case $q = p_i$. 
+
+\section*{Appendix II. A note on commutation of operators}
+
+In general, if two operators commute, 
+\[ [\hat{A}, \hat{B}] = \hat{A}\hat{B} -\hat{B}\hat{A} = 0 \]
+This means that
+\[\hat{A}\hat{B} = \hat{B}\hat{A} \]
+The order that you write the operators does not matter.
+Qualitatively, we can say that two operators act independently of each other. 
+
+%\section{Wick's Theorem}
+%%maybe outline of how it's gonna go - the things in wick's thrm treat one by one, etc.
+%\subsection{Normal Products}
+%\subsection{Contractions of Operators}
+%\subsection{Normal Products with Contractions}
+%\subsection{Proof of 2 Lemmas}
+%\subsection{Proof of Wick's Theorem}
+%%after this - maybe a map of why wick's theorem is useful: have normal products and normal products with contractions, have 
+%%rules for determining these in the vacuum, then wick's theorem provides a way to put any product of operators in these forms
+%\section{Derivation of Slater's rules using Wick's Theorem}
+%\section{Particle-Hole Formalism}
+%\subsection{Motivating the particle-hole formalism}
+%\subsection{Normal Products}
+%\subsection{Contractions of Operators}
+%\subsection{Normal Products with Contractions}
+%\subsection{Wick's Theorem}
+%\section{$\Phi$--Normal ordered Hamiltonian}
 
 \begin{comment}
 Types of problems:
 1. Slater's rules
-2. 
-
-
 Types of ways to solve:
 1. First quantization
 2. 2nd quantization in the true vacuum without Wick's theorem
 3. 2nd quantization in the true vacuum with Wick's theorem
 4. PH formalism with Wick's theorem 
 5. PH formalism with Wick's theorem and $\Phi$-normal ordered Hamiltonian
-
 \end{comment}
 
-\section{Exercises}
-
-\section{Recommended Resources}
 \end{document}
