adding lecture notes and exercises for second quantization b

--- a/2020/exercises/tex/3_Second_Quantization_b_exercises.tex
+++ b/2020/exercises/tex/3_Second_Quantization_b_exercises.tex
@@ -26,11 +26,13 @@
 \maketitle
 \noindent
 \begin{enumerate}
-\item Derive the first Slater's rule using the second quantization formalism: 
+\item Evaluate \[\braket{\Phi_{pq} | \Phi_{rst}} \]
+\item Show that the first Slater's rule using the second quantization formalism: 
 \[\braket{\Phi | \hat{H} | \Phi} = h_{ii} + \frac{1}{2} \sum_{ij} \braket{ij || ij} \]
-\item (Optional, if you need more practice) Derive the second Slater's rule using the second quantization formalism: 
+holds for $\Phi_{p_1}$ and $\Phi_{p_1 p_2}$
+\item (Optional, if you need more practice) Show that the second Slater's rule using the second quantization formalism: 
 \[\braket{\Phi | \hat{H} | \Phi_i^a } = h_{ia} + \frac{1}{2} \sum_{j} \braket{ij || aj} \]
-where $\ket{\Phi_i^a } = a_a\dg a_i \ket{\Phi}$
+where $\ket{\Phi_i^a } = a_a\dg a_i \ket{\Phi}$ holds for $\Phi_{p_1}$ and $\Phi_{p_1 p_2}$
 \item Work through the derivation of the one-electron and two-electron operators in the second quantization formalism yourself and make sure you understand what is going on 
 \item Show that normal vs antisymmetrized forms of the two-electron operator are equivalent. Bonus: show that the antisymmetrized form for a general k-body operator is equivalent to its normal form 
 \item Show that $\hat{h}(\*{r_i}) \phi_p (\*{r_i})  = \sum_q \braket{q | \hat{h} | p } \phi_q (\*{r_i}) $
