--- a/2020/lecture_notes/tex/3_Second_Quantization_b.tex
+++ b/2020/lecture_notes/tex/3_Second_Quantization_b.tex
@@ -82,7 +82,7 @@ by applying Equation 5 twice.
 
 We can come to a definition of the one-electron operator $\hat{O}_1 = \sum\limits_i^N \hat{h} (\*{r}_i) $  in the second quantization formalism by acting it a determinant $ \Phi_{p_1 \cdots p_N} = \prod a\dg \ket{0} $:  \\ \\
 \[\hat{O}_1 \prod a\dg \ket{0} = \hat{O}_1\Phi_{p_1 \cdots p_N} = \hat{O}_1 \sqrt{N!} \hat{A} (\psi_{p_1} \cdots \psi_{p_N}) \]
-Next, we recognize that  $\hat{A}$ and $\hat{O}_1$, so we can switch their order (for general comments on commuting operators, see Appendix II): 
+Next, we recognize that  $\hat{A}$ and $\hat{O}_1$ commute, so we can switch their order (for general comments on commuting operators, see Appendix II): 
 \[ = \sqrt{N!}  \hat{A} \hat{O}_1  (\psi_1 \cdots \psi_N) \]
 We can now re-express $\hat{O}_1$: 
 \[=  \sqrt{N!}  \hat{A}  \sum_i^N \hat{h} (\*{r}_i) (\psi_1 \cdots \psi_N) \]
