adding lecture slides for second quantization and minor changes to notes

--- a/2020/lecture_notes/tex/3_Second_Quantization_a.tex
+++ b/2020/lecture_notes/tex/3_Second_Quantization_a.tex
@@ -293,7 +293,7 @@ we can see that
  a_{p_1}^\dagger a_{p_2}^\dagger \cdots a_{p_N}^\dagger \ket{0}\]
 In words, a Slater determinant can be represented by a string of creation operators acting on the vacuum in the same order as the spin states in the Slater determinant. \\ \\
 If we now consider a unordered set $q_1 \cdots q_N$, we can conclude that 
-\begin{equation}\ket{\Phi_{q_1 \cdots p_N}} = a_{q_1}^\dagger \cdots a_{p_N}^\dagger \ket{0}\end{equation}
+\begin{equation}\ket{\Phi_{p_1 \cdots p_N}} = a_{p_1}^\dagger \cdots a_{p_N}^\dagger \ket{0}\end{equation}
 since in order to put $q_1 \cdots q_N$ in order, the change of sign will be the same whether we permute the determinant or the string of operators. 
 Since the change of sign is the same on both sides, we do not have to keep track of it. 
 Thus, \textit{any} string of creation operators acting on the vacuum is equivalent to the corresponding Slater determinant with the same ordering of states. 
