--- a/2020/lecture_notes/tex/3_Second_Quantization_b.tex
+++ b/2020/lecture_notes/tex/3_Second_Quantization_b.tex
@@ -200,7 +200,7 @@ Since Equation~\ref{eqx}  is true for any arbitrary determinant, we conclude tha
 is an appropriate definition for the two-electron operator in the second quantization formalism.
 \\
 \subsection{The antisymmetrized form of the two body operator}
-In general N-body operator in the second quantization formalism can be expressed as :
+In general, the N-body operator in the second quantization formalism can be expressed as :
 \[ \hat{O}_k = \frac{1}{k!}   \sum_{\substack{p_1 \cd p_k \\q_1 \cd q_k }}  \braket{ p_1 \cd p_k | \hat{o}_k | q_1 \cd q_k} a_{p_1}\dg \cd \ a_{p_k}\dg a_{q_k} \cd a_{q_1} \]
 This way of expressing the N-body operator, however, only gives us non-symmetric matrix elements. 
 What I mean by this is that the matrix element is only the same under simultaneous permutations of the $p$s and the $q$s. 
