--- a/2020/exercises/tex/3_Second_Quantization_b_exercises.tex
+++ b/2020/exercises/tex/3_Second_Quantization_b_exercises.tex
@@ -35,8 +35,8 @@ holds for $\Phi_{p_1}$ and $\Phi_{p_1 p_2}$
 where $\ket{\Phi_i^a } = a_a\dg a_i \ket{\Phi}$ holds for $\Phi_{p_1}$ and $\Phi_{p_1 p_2}$
 \item Work through the derivation of the one-electron and two-electron operators in the second quantization formalism yourself and make sure you understand what is going on 
 \item Show that normal vs antisymmetrized forms of the two-electron operator are equivalent. Bonus: show that the antisymmetrized form for a general k-body operator is equivalent to its normal form 
-\item Show that $\hat{h}(\*{r_i}) \phi_p (\*{r_i})  = \sum_q \braket{q | \hat{h} | p } \phi_q (\*{r_i}) $
-\item (Optional) Show that $\hat{g}(\*{r_i}, \*{r_j}) \phi_{p_i} (\*{r_i}) \phi_{p_j} (\*{r_j})  \sum_{pq} \braket{pq | \hat{h} | p_i p_j  }  \phi_p (\*{r_i})  \phi_q (\*{r_i})$
+\item Show that $\hat{h}(\*{r_i}) \phi_p (\*{r_i})  = \sum_q \braket{q | \hat{h} | p } \phi_q (\*{r_i}) $ (Hint: rewrite in terms of bra-ket notation, and write $\phi_a$ as $\ket{a}$ )
+\item (Optional) Show that $\hat{g}(\*{r_i}, \*{r_j}) \phi_{p_i} (\*{r_i}) \phi_{p_j} (\*{r_j}) =  \sum_{pq} \braket{pq | \hat{h} | p_i p_j  }  \phi_p (\*{r_i})  \phi_q (\*{r_i})$
 \item (Optional) Show that 
 \[a_r a_s \prod a\dg \ket{0} = \sum\limits_{i < j} ^N  (-1)^{i + j }   \delta_{rp_i} \delta_{sp_j}  \prod{}^{p_ip_j} a\dg \ket{0} + 
 \sum\limits_{i > j} ^N  (-1)^{i + j -1} \delta_{rp_i} \delta_{sp_j} \prod{}^{p_ip_j}a\dg \ket{0} \]
